<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view"
      android:layout_height="match_parent"
      android:layout_width="match_parent">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/profile_item"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/profile" />
        <item
                android:id="@+id/search_item"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/search" />
        <item
                android:id="@+id/settings_item"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
    </group>



</menu>