<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/kwarantariusz_instruction_background">


    <TextView
            android:text="@string/welcome_page_let_our_heroic"
            android:layout_width="299dp"
            android:layout_height="27dp"
            android:id="@+id/sayhito_welcome_t" android:textSize="18sp"
            android:textColor="@color/BasicWhite"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/hellothee_welcome_t"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/welcome_page_quaranteers"
            android:layout_width="373dp"
            android:layout_height="68dp"
            android:id="@+id/l_earn_welcome_t" android:textSize="45sp"
            android:textColor="@color/BasicWhite" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sayhito_welcome_t"/>
    <TextView
            android:text="@string/welcome_page_do_you_need_help"
            android:layout_width="345dp"
            android:layout_height="128dp"
            android:id="@+id/hellothee_welcome_t" android:textSize="24sp"
            android:textColor="@color/BasicWhite" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="290dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/image_instructions_atom"
            android:id="@+id/imageView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>