<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/kwarantariusz_instruction_background">

    <ImageView
            android:layout_width="239dp"
            android:layout_height="179dp" app:srcCompat="@drawable/circle_hero"
            android:id="@+id/image_atom2" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/quaranteer_instruction_become"
            android:layout_width="62dp"
            android:layout_height="24dp"
            android:id="@+id/advertise_teacher_t" android:textSize="14sp"
            android:textColor="@color/BasicWhite"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ifyouareateacher_teacher"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/quaranteer_instruction_make_account"
            android:layout_width="212dp"
            android:layout_height="45dp"
            android:id="@+id/givefeedback_teacher_t" android:textSize="14sp"
            android:textColor="@color/BasicWhite"
            app:layout_constraintTop_toBottomOf="@+id/findclients_findclients_t"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/quaranteer_instruction_quaranteer_exclamation_mark"
            android:layout_width="316dp"
            android:layout_height="38dp"
            android:id="@+id/findclients_findclients_t" android:textSize="30sp"
            android:textColor="@color/BasicWhite"
            app:layout_constraintTop_toBottomOf="@+id/advertise_teacher_t" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/quaranteer_instruction_do_you_want_to_help"
            android:layout_width="204dp"
            android:layout_height="42dp"
            android:id="@+id/ifyouareateacher_teacher" android:textSize="14sp"
            android:textColor="@color/BasicWhite"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="270dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:id="@+id/teacher_instructions_visit_website_button"
            android:layout_width="73dp"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/join" android:textColor="@color/BasicWhite"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/givefeedback_teacher_t"/>
</androidx.constraintlayout.widget.ConstraintLayout>