<?xml version="1.0" encoding="utf-8"?>
<!--This is sample code! Do NOT touch it!!! You can make a copy and edit a copy.-->
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/level_search_L"
            android:layout_width="57dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp" android:layout_marginTop="20dp"
            android:text="@string/level" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subject_search_L"/>
    <TextView
            android:id="@+id/subject_search_L"
            android:layout_width="57dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" android:text="@string/subject"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <!--<TextView-->
            <!--android:id="@+id/filter_price_search_L"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="36dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:text="Filter by price" app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/level_search_L"/>-->
    <!--<TextView-->
            <!--android:text="Distance"-->
            <!--android:layout_width="107dp"-->
            <!--android:layout_height="25dp"-->
            <!--android:id="@+id/filter_distance_search_L"-->
            <!--android:layout_marginTop="17dp" app:layout_constraintTop_toBottomOf="@+id/filter_price_search_L"-->
            <!--app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="36dp"/>-->
    <Spinner
            android:id="@+id/level_search_spinner"
            android:layout_width="162dp"
            android:layout_height="29dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subject_search_spinner"/>
    <Spinner
            android:id="@+id/subject_search_spinner"
            android:layout_width="162dp"
            android:layout_height="29dp"
            android:layout_marginTop="32dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <!--<Spinner-->
            <!--android:id="@+id/filter_price_search_spinner"-->
            <!--android:layout_width="162dp"-->
            <!--android:layout_height="21dp"-->
            <!--android:layout_marginStart="92dp" android:layout_marginTop="20dp"-->
            <!--app:layout_constraintStart_toEndOf="@+id/filter_price_search_L" app:layout_constraintTop_toBottomOf="@+id/level_search_spinner"/>-->
    <!--<SeekBar-->
            <!--android:layout_width="159dp"-->
            <!--android:layout_height="26dp"-->
            <!--android:id="@+id/filter_distance_search_seekbar"-->
            <!--android:layout_marginStart="72dp" app:layout_constraintStart_toEndOf="@+id/filter_distance_search_L"-->
            <!--android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/filter_price_search_spinner"/>-->
    <Button
            android:id="@+id/go_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/search" android:textColor="@color/DefaultTextGray"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timePicker1"/>







    <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="332dp"
            android:layout_height="111dp"
            android:layout_marginTop="16dp" android:calendarViewShown="false"
            android:datePickerMode="spinner" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choosedate_info_TV"/>


    <TimePicker android:id="@+id/timePicker1"
                android:layout_width="332dp"
                android:layout_height="111dp"
                android:layout_marginTop="16dp"
                android:timePickerMode="spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choosetime_info_TV"/>

    <TextView
            android:id="@+id/choosedate_info_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/choosedate" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/choosetime_info_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choosetime" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/datePicker1"/>


</androidx.constraintlayout.widget.ConstraintLayout>